fixed notes edit
