# src/user/dto/editNotes.dto.ts
@@ -1,0 +1,6 @@
+import { ApiProperty } from '@nestjs/swagger';
+
+export class EditNotesDto {
+  @ApiProperty()
+  body: string;
+}
